--- a/Angular/src/app/components/client/client-header/client-header.component.html
+++ b/Angular/src/app/components/client/client-header/client-header.component.html
@@ -11,7 +11,8 @@
       <div class="navbar-nav ml-auto">
         <a class="nav-item nav-link mr-5" href="#">Dashboard</a>
         <a class="nav-item nav-link signUp border" routerLink="register">Sign up</a>
-        <a class="nav-item nav-link border-right" href="#">Login</a>
+        <a class="nav-item nav-link border-right" routerLink="login" >Login</a>
+        <a class="nav-item nav-link border-right" (click)="Logout()" >Logout</a>
         <a class="nav-item nav-link border-right" routerLink="registerDoctor">Vezeeta for doctors</a>
         <a class="nav-item nav-link border-right" href="#">Contact us</a>
         <a class="nav-item nav-link" href="#">عربي</a>
