--- a/Angular/src/app/components/client/client-header/client-header.component.html
+++ b/Angular/src/app/components/client/client-header/client-header.component.html
@@ -9,12 +9,12 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ml-auto">
-        <a class="nav-item nav-link mr-5" routerLink="dashboard">Dashboard</a>
-        <a class="nav-item nav-link signUp border" routerLink="register">Sign up</a>
-        <a class="nav-item nav-link border-right" routerLink="login" >Login</a>
-        <a class="nav-item nav-link border-right" (click)="Logout()" >Logout</a>
-        <a class="nav-item nav-link border-right" routerLink="registerDoctor">Vezeeta for doctors</a>
-        <a class="nav-item nav-link border-right" routerLink="doctorDashboard">doctors Dashboard</a>
+        <a class="nav-item nav-link mr-5" routerLink="dashboard" *ngIf="isLoggedIn()">Dashboard</a>
+        <a class="nav-item nav-link signUp border" routerLink="register" *ngIf="!isLoggedIn()">Sign up</a>
+        <a class="nav-item nav-link border-right" routerLink="login" *ngIf="!isLoggedIn()">Login</a>
+        <a class="nav-item nav-link border-right" (click)="Logout()" *ngIf="isLoggedIn()">Logout</a>
+        <a class="nav-item nav-link border-right" routerLink="registerDoctor" *ngIf="!isLoggedIn()">Vezeeta for doctors</a>
+        <a class="nav-item nav-link border-right" routerLink="doctorDashboard/attachment" *ngIf="isLoggedIn()">doctors Dashboard</a>
         <a class="nav-item nav-link border-right" href="#">Contact us</a>
         <a class="nav-item nav-link" href="#">عربي</a>
       </div>
