implement Doctor Service

--- a/Angular/src/app/components/dashboard/dashboard-sidebar/dashboard-sidebar.component.html
+++ b/Angular/src/app/components/dashboard/dashboard-sidebar/dashboard-sidebar.component.html
@@ -18,5 +18,8 @@
         <li>
             <a routerLink="doctorAttachments"><i class="fas fa-tags"></i> Doctor Attachments</a>
         </li>
+        <li>
+            <a routerLink="doctorServices"><i class="fas fa-tags"></i> Doctor Services</a>
+        </li>
     </ul>
 </nav>
