--- a/Angular/src/app/components/dashboard/city/city.component.html
+++ b/Angular/src/app/components/dashboard/city/city.component.html
@@ -17,7 +17,7 @@
             <td>{{ city.name }}</td>
             <td>
                 <button class="btn btn-success mx-2" data-toggle="modal" data-target="#addAndUpdateModel" (click)="openUpdateCityModal(city.id)">Update</button>
-                <button class="btn btn-danger mx-2" (click)="openDeleteCityModal(city.id)" data-toggle="modal" data-target="#deleteModel">Delete</button>
+                <button class="btn btn-danger mx-2" (click)="openDeleteCityModal(city.id)" data-toggle="modal" data-target="#confirmationModal">Delete</button>
             </td>
         </tr>
     </tbody>
