--- a/Angular/src/app/components/dashboard/clinic-services/clinic-services.component.html
+++ b/Angular/src/app/components/dashboard/clinic-services/clinic-services.component.html
@@ -20,7 +20,7 @@
           
             <td>
                 <button class="btn btn-success mx-2" data-toggle="modal" data-target="#addAndUpdateModel" (click)="openUpdateClinicServicesModal(cs.id)">Update</button>
-                <button class="btn btn-danger mx-2" (click)="openDeleteClinicServiceModal(cs.id)" data-toggle="modal" data-target="#deleteModel">Delete</button>
+                <button class="btn btn-danger mx-2" (click)="openDeleteClinicServiceModal(cs.id)" data-toggle="modal" data-target="#confirmationModal">Delete</button>
             </td>
         </tr>
     </tbody>
