--- a/Angular/src/app/components/doctor-dashboard/doctor-dashboard-sildbar/doctor-dashboard-sildbar.component.html
+++ b/Angular/src/app/components/doctor-dashboard/doctor-dashboard-sildbar/doctor-dashboard-sildbar.component.html
@@ -1,5 +1,6 @@
 <div class="nav flex-column nav-pills siderbar mb-3">
-    <a class="nav-link nav-link-top active" data-toggle="pill" routerLink="attachment">Attachment</a>
+    <a class="nav-link nav-link-top active" data-toggle="pill" routerLink="doctorSpecialty">Specialty and SubSpecialty</a>
+    <a class="nav-link" data-toggle="pill" routerLink="attachment">Attachment</a>
     <a class="nav-link" data-toggle="pill" routerLink="clinc">Clinic Details</a>
     <a class="nav-link" data-toggle="pill" routerLink="workingDays">Clinic Working Days</a>
     <a class="nav-link" data-toggle="pill" href="#v-pills-messages">Messages</a>
