implement patient registeration

--- a/Angular/src/app/components/client/client-header/client-header.component.html
+++ b/Angular/src/app/components/client/client-header/client-header.component.html
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ml-auto">
         <a class="nav-item nav-link mr-5" routerLink="dashboard" *ngIf="isLoggedIn()">Dashboard</a>
-        <a class="nav-item nav-link signUp border" routerLink="register" *ngIf="!isLoggedIn()">Sign up</a>
+        <a class="nav-item nav-link signUp border" routerLink="registerUser" *ngIf="!isLoggedIn()">Sign up</a>
         <a class="nav-item nav-link border-right" routerLink="login" *ngIf="!isLoggedIn()">Login</a>
         <a class="nav-item nav-link border-right" (click)="Logout()" *ngIf="isLoggedIn()">Logout</a>
         <a class="nav-item nav-link border-right" routerLink="registerDoctor" *ngIf="!isLoggedIn()">Vezeeta for doctors</a>
