--- a/Angular/src/app/components/doctor-dashboard/docotor-specialty/docotor-specialty.component.html
+++ b/Angular/src/app/components/doctor-dashboard/docotor-specialty/docotor-specialty.component.html
@@ -5,8 +5,8 @@
 
 
     <div class="p-2">
-        <div>
-            <div class="row">
+        <div  class="container">
+            <div class="row ">
                 <div class="col-12 col-md-6">
                     <label >Choose SubSpecialty</label>
                     
@@ -25,16 +25,17 @@
                     
                     <div class="row m-0 p-0 ">
                         <div class="col-10 px-1">
-                            <input type="text" class="form-control" [(ngModel)]="insertSubSpecialValue" #insert>
+                            <input type="text" class="form-control" [(ngModel)]="insertSubSpecialInputValue" #insert>
                         </div>
                         <div class="col-2 px-0">
                             <button class="btn btn-primary" (click)="add(insert.value)">add</button>
                         </div>
                     </div>
                     <div>
+                        <button class="btn btn-primary m-1 sss" (click)="removefromNewSubSpecial(sup.id)" *ngFor="let sup of NotAcceptByAdminSubSpecialtySelected">{{sup.name}} <i class="fas fa-times-circle"></i></button>
                         <button class="btn btn-primary m-1 sss" (click)="removefromNewSubSpecial(sup.id)" *ngFor="let sup of addNewSubSpecialty">{{sup.name}} <i class="fas fa-times-circle"></i></button>
                     </div>
-                    <span class="text-info" *ngIf="addNewSubSpecialty.length>0">* after enter this waiting to accept by admin</span>
+                    <span class="text-warning" *ngIf="addNewSubSpecialty.length>0 || NotAcceptByAdminSubSpecialtySelected.length>0">* after enter this waiting to accept by admin</span>
                     
                 </div>
                 
