--- a/Angular/src/app/components/doctor-dashboard/doctor-dashboard.component.html
+++ b/Angular/src/app/components/doctor-dashboard/doctor-dashboard.component.html
@@ -1,10 +1,10 @@
 <div class="dashboard">
     <div class="container p-4">
         <div class="row">
-            <div class="col-3">
+            <div class="col-12 col-md-3">
                 <app-doctor-dashboard-sildbar></app-doctor-dashboard-sildbar>
             </div>
-            <div class="col-9">
+            <div class="col-12 col-md-9">
                 <router-outlet></router-outlet>
                 
             </div>
