--- a/Angular/src/app/components/doctor-dashboard/clinic-working-days/clinic-working-days.component.html
+++ b/Angular/src/app/components/doctor-dashboard/clinic-working-days/clinic-working-days.component.html
@@ -21,6 +21,8 @@
             <input type="time" class="form-control" formControlName="from">
             <label class="d-inline-block">To</label>
             <input type="time" class="form-control" formControlName="to">
+             <label class="d-inline-block">Reservations</label>
+            <input type="number" class="form-control numOfReservations" formControlName="maxNumOfReservation">
           </div>
         </div>
         <div class="text-right">
@@ -43,6 +45,8 @@
             <input type="time" class="form-control" formControlName="from">
             <label class="d-inline-block">To</label>
             <input type="time" class="form-control" formControlName="to">
+             <label class="d-inline-block">Reservations</label>
+            <input type="number" class="form-control numOfReservations" formControlName="maxNumOfReservation">
           </div>
         </div>
         <div class="text-right">
@@ -65,6 +69,8 @@
             <input type="time" class="form-control" formControlName="from">
             <label class="d-inline-block">To</label>
             <input type="time" class="form-control" formControlName="to">
+             <label class="d-inline-block">Reservations</label>
+            <input type="number" class="form-control numOfReservations" formControlName="maxNumOfReservation">
           </div>
         </div>
         <div class="text-right">
@@ -87,6 +93,8 @@
             <input type="time" class="form-control" formControlName="from">
             <label class="d-inline-block">To</label>
             <input type="time" class="form-control" formControlName="to">
+             <label class="d-inline-block">Reservations</label>
+            <input type="number" class="form-control numOfReservations" formControlName="maxNumOfReservation">
           </div>
         </div>
         <div class="text-right">
@@ -109,6 +117,8 @@
             <input type="time" class="form-control" formControlName="from">
             <label class="d-inline-block">To</label>
             <input type="time" class="form-control" formControlName="to">
+             <label class="d-inline-block">Reservations</label>
+            <input type="number" class="form-control numOfReservations" formControlName="maxNumOfReservation">
           </div>
         </div>
         <div class="text-right">
@@ -131,6 +141,8 @@
             <input type="time" class="form-control" formControlName="from">
             <label class="d-inline-block">To</label>
             <input type="time" class="form-control" formControlName="to">
+             <label class="d-inline-block">Reservations</label>
+            <input type="number" class="form-control numOfReservations" formControlName="maxNumOfReservation">
           </div>
         </div>
         <div class="text-right">
@@ -153,6 +165,8 @@
             <input type="time" class="form-control" formControlName="from">
             <label class="d-inline-block">To</label>
             <input type="time" class="form-control" formControlName="to">
+             <label class="d-inline-block">Reservations</label>
+            <input type="number" class="form-control numOfReservations" formControlName="maxNumOfReservation">
           </div>
         </div>
         <div class="text-right">
