--- a/Angular/src/app/components/doctor-dashboard/clinic-working-days/clinic-working-days.component.scss
+++ b/Angular/src/app/components/doctor-dashboard/clinic-working-days/clinic-working-days.component.scss
@@ -21,4 +21,5 @@ label{
     &.shift{font-weight: bold; margin-left: 3rem;}
     &.form-check-label{font-weight: bold;}
   }
+  input.form-control.numOfReservations{width: 10%;}
 }
