Add Services to doctors with bridge model

--- a/Angular/src/app/components/doctor-dashboard/doctor-services/doctor-services.component.html
+++ b/Angular/src/app/components/doctor-dashboard/doctor-services/doctor-services.component.html
@@ -3,10 +3,10 @@
         Doctor Services
     </div>
 
-    <div class="d-flex" style="justify-content: center;">
+    <!-- <div class="d-flex" style="justify-content: center;">
 
 
-        <form class="p-5 border col-12">
+         <form class="p-5 border col-12">
             <div class="d-flex">
                 <div class="col-5 border" style="overflow-y:auto;height: 300px;">
                     Service ByAdmin
@@ -14,22 +14,7 @@
                     <input type="checkbox" class="form-check-input"  (change)="changeStatus(item,$event)" [checked]="item.checked">
                     <label class="form-check-label" for="exampleCheck1">{{item.name}}</label>
                   </div>
-                    <!-- <div class="form-check" *ngFor="let service of ServicesList">
-                        <div *ngFor="let doctorservice of SelectedServiceIdList">
-                            <div *ngIf="service.id == doctorservice.id">
-                              
-                                <input type="checkbox" class="form-check-input" (change)="changeStatus(service,$event)"
-                                    checked>
-                                <label class="form-check-label" for="exampleCheck1">{{service.name}}</label>
-
-                            </div>
-                            <div *ngIf="service.id != doctorservice.id">
-                                <input type="checkbox" class="form-check-input" (change)="changeStatus(service,$event)">
-                                <label class="form-check-label" for="exampleCheck1">{{service.name}}</label>
-
-                            </div>
-                        </div>
-                    </div> -->
+                   
                 </div>
 
                 <div class="col-5 ml-5 border" style="overflow-y:auto;height: 300px;">
@@ -40,7 +25,7 @@
                         <label class="form-check-label" for="exampleCheck1">{{item.Name}}</label>
                     </div>
                 </div>
-                <!-- <input type="checkbox" checked="true">  -->
+              
 
             </div>
             <div *ngIf="!hasServices" class="mt-5">
@@ -50,25 +35,21 @@
                 <div class="col-5 border" style="overflow-y:auto;height: 300px;">
                     My Services
                     <div class="form-check" *ngFor="let item of SelectedServiceIdList">
-                        <!-- <input type="checkbox" class="form-check-input" id="exampleCheck1" (change)="changeStatus(item,$event)"> -->
-                        <label class="form-check-label" for="exampleCheck1">{{item.name}}</label>
+                         <input type="checkbox" class="form-check-input" id="exampleCheck1" (change)="changeStatus(item,$event)"> -->
+                        <!-- <label class="form-check-label" for="exampleCheck1">{{item.name}}</label>
                     </div>
                 </div>
             </div>
 
             <div class="mt-5 d-flex justify-content-end">
-                <!-- <button class="btn btn-primary mr-3 col-3"  (click)="AddNewService()">
-                Add  MyService
-            </button> -->
+               
                 <button class="btn btn-primary mb-2 dBAddNewBtn" data-toggle="modal" data-target="#addAndUpdateModel">
                     New
                 </button>
-            </div>
+            </div> -->
 
 
-
-
-            <div class="mt-5">
+            <!-- <div class="mt-5">
                 <button class="btn btn-primary mr-3 col-3" *ngIf="!hasServices" (click)="onAddSubmit()">
                     Save
                 </button>
@@ -76,15 +57,63 @@
                     Save Edit
                 </button>
             </div>
-        </form>
+        </form>  
+        
+    </div> -->
+
+    <div class="p-2">
+        <div>
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <label >Choose Services</label>
+                    
+                    <ng-select 
+                        [items]="ServicesList" 
+                        bindLabel="name"
+                        placeholder="Select Services you offer" 
+                        appendTo="body"
+                        multiple="true" 
+                        [(ngModel)]="SelectedServiceIdList">
+                    </ng-select>
+                   
+                </div>
+                <div class="col-12 col-md-6">
+                    <label >Add new Service</label>
+                    
+                    <div class="row m-0 p-0 ">
+                        <div class="col-10 px-1">
+                            <input type="text" class="form-control" [(ngModel)]="insertServiceValue" #insert>
+                        </div>
+                        <div class="col-2 px-0">
+                            <button class="btn btn-primary" (click)="add(insert.value)">add</button>
+                        </div>
+                    </div>
+                    <div>
+                        <button class="btn btn-primary m-1 sss" (click)="removefromNewServices(ser.id)" *ngFor="let ser of addNewServicesList">{{ser.name}} <i class="fas fa-times-circle"></i></button>
+                        <button class="btn btn-primary m-1 sss" (click)="removefromNewServices(ser.id)" *ngFor="let ser of NotAcceptByAdminServiceSelected">{{ser.name}} <i class="fas fa-times-circle"></i></button>
+                    </div>
+                    <span class="text-info" *ngIf="addNewServicesList.length>0">* after enter this waiting to accept by admin</span>
+                    
+                </div>
+                
+            </div>
+            <hr>
+            <div class="text-right">
+                <button class="btn btn-primary px-3" (click)="onAddSubmit()" *ngIf="!hasServices">Save</button>
+            </div>
+            <div class="text-right">
+                <button class="btn btn-primary col-3" *ngIf="hasServices" (click)="onEditSubmit()">
+                    Save Edit
+                </button>
+            </div>
+           
+        </div>
     </div>
 
 
 
-
-
 </div>
-<div class="modal fade" id="addAndUpdateModel" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+<!-- <div class="modal fade" id="addAndUpdateModel" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
     aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
@@ -112,4 +141,4 @@
             </form>
         </div>
     </div>
-</div>
+</div> -->
