--- a/Angular/src/app/components/doctor-dashboard/doctor-clinc/doctor-clinc.component.html
+++ b/Angular/src/app/components/doctor-dashboard/doctor-clinc/doctor-clinc.component.html
@@ -79,7 +79,10 @@
                  <div *ngIf="formFields.AreaId.invalid && formFields.AreaId.touched">
                     <small class="text-danger" *ngIf="formFields.AreaId.errors?.required"> Area Is Required</small>
                 </div>
+                <button class="btn btn-primary mt-3 d-flex" data-toggle="modal" data-target="#AddOrUpdateModal"
+                (click)="openAddAreaModal()">Add My Area</button>
             </div>
+           
             </div>
             <div class="mt-5 border d-flex" style="flex-direction: row;flex-wrap: wrap;" *ngIf="hasImage">
                   <div class="col-3  mt-2" style="height: fit-content;" *ngFor="let item of MyClinicImages">
@@ -106,5 +109,49 @@
 
             <!-- <div class="alert alert-danger mt-3 mb-0"></div> -->
         </form>
+    </div>
+</div>
+
+
+//Modal
+<div class="modal fade" id="AddOrUpdateModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Add New Area</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <form [formGroup]="areaForm">
+                <div class="modal-body">
+                    
+                        <label for="area-name" class="col-form-label">Name:</label>
+                        <input type="text" class="form-control" id="area-name" formControlName="name">
+                        <div *ngIf="name.invalid && name.touched">
+                            <small class="text-danger" *ngIf="name.errors?.required">The Name in required</small>
+                            <small class="text-danger" *ngIf="name.errors?.minlength">The Number Should be More Than 2 Character</small>
+                        </div>
+
+                        
+                        <label for="cityName">City Name</label>
+
+                        <select class="form-control" id="cityName" formControlName="cityID" >
+                            
+                            <option *ngFor="let city of Cityies" [ngValue]="city.id">
+                                {{city.name}}
+                            </option>
+                        </select>
+                    
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal" #modalCloseBtn>Close</button>
+                    <button type="button" class="btn btn-primary" (click)="addNewArea()" [disabled]="areaForm.invalid">
+                        Add
+                    </button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
