--- a/Angular/src/app/components/doctor-dashboard/doctor-dashboard-sildbar/doctor-dashboard-sildbar.component.html
+++ b/Angular/src/app/components/doctor-dashboard/doctor-dashboard-sildbar/doctor-dashboard-sildbar.component.html
@@ -5,6 +5,7 @@
     <a class="nav-link" data-toggle="pill" [class.active]="urlRouteName=='doctorServices'" routerLink="doctorServices">Doctor Services</a>
     <a class="nav-link" data-toggle="pill" [class.active]="urlRouteName=='clinc'" routerLink="clinc">Clinic Details</a>
     <a class="nav-link nav-link-bootom" data-toggle="pill" [class.active]="urlRouteName=='workingDays'" routerLink="workingDays">Clinic Working Days</a>
+    <a class="nav-link" data-toggle="pill" [class.active]="urlRouteName=='clinc'" routerLink="clinicServices">Clinic Services</a>
     <a class="nav-link" data-toggle="pill" href="#v-pills-messages">Messages</a>
     <a class="nav-link nav-link-bootom" data-toggle="pill" href="#v-pills-settings">Settings</a>
 </div>
