--- a/Angular/src/app/components/dashboard/city/city.component.html
+++ b/Angular/src/app/components/dashboard/city/city.component.html
@@ -4,7 +4,7 @@
   New
 </button>
 <table class="table table-bordered table-hover" *ngIf="hasCities">
-    <thead class="thead-dark">
+    <thead class="">
         <tr>
             <th scope="col">#</th>
             <th scope="col">Name</th>
