--- a/Angular/src/app/components/dashboard/dashboard-sidebar/dashboard-sidebar.component.html
+++ b/Angular/src/app/components/dashboard/dashboard-sidebar/dashboard-sidebar.component.html
@@ -21,5 +21,12 @@
         <li>
             <a routerLink="doctorServices"><i class="fas fa-tags"></i> Doctor Services</a>
         </li>
+        <hr>
+        <li>
+            <a routerLink="offer"><i class="fas fa-tags"></i> Offer</a>
+        </li>
+        <li>
+            <a routerLink="subOffer"><i class="fas fa-tags"></i> SubOffer</a>
+        </li>
     </ul>
 </nav>
