--- a/Angular/src/app/components/dashboard/doctor-attachments/doctor-attachments.component.html
+++ b/Angular/src/app/components/dashboard/doctor-attachments/doctor-attachments.component.html
@@ -7,7 +7,7 @@
 </select>
 
 <table class="table table-bordered table-hover" *ngIf="hasDoctorAttachments">
-    <thead class="thead-dark">
+    <thead class="">
         <tr>
             <th scope="col">#</th>
             <th scope="col">Personal Image</th>
