--- a/Angular/src/app/components/dashboard/clinic-services/clinic-services.component.html
+++ b/Angular/src/app/components/dashboard/clinic-services/clinic-services.component.html
@@ -5,7 +5,7 @@
 </button>
 
 <table class="table table-bordered table-hover" *ngIf="hasClinicServices">
-    <thead class="thead-dark">
+    <thead class="">
         <tr>
             <th scope="col">#</th>
             <th scope="col">Name</th>
