--- a/Angular/src/app/components/dashboard/manage-doctor-services/manage-doctor-services.component.html
+++ b/Angular/src/app/components/dashboard/manage-doctor-services/manage-doctor-services.component.html
@@ -8,7 +8,7 @@
     <option value="ByDoctor">By Doctor</option>
 </select>
 <table class="table table-bordered table-hover" *ngIf="hasDoctorServices">
-    <thead class="thead-dark">
+    <thead class="">
         <tr>
             <th scope="col">#</th>
             <th scope="col">Name</th>
