--- a/Angular/src/app/components/doctor-dashboard/choose-clinic-service/choose-clinic-service.component.html
+++ b/Angular/src/app/components/doctor-dashboard/choose-clinic-service/choose-clinic-service.component.html
@@ -25,15 +25,15 @@
                   
                   <div class="row m-0 p-0 ">
                       <div class="col-10 px-1">
-                          <input type="text" class="form-control" [(ngModel)]="insertSubSpecialInputValue" #insert>
+                          <input type="text" class="form-control" [(ngModel)]="insertClinicServiceInputValue" #insert>
                       </div>
                       <div class="col-2 px-0">
-                          <!-- <button class="btn btn-primary" (click)="add(insert.value)">add</button> -->
+                          <button class="btn btn-primary" (click)="add(insert.value)">add</button>
                       </div>
                   </div>
                   <div>
-                      <!-- <button class="btn btn-primary m-1 sss" (click)="removefromNewSubSpecial(sup.id)" *ngFor="let sup of NotAcceptByAdminSubSpecialtySelected">{{sup.name}} <i class="fas fa-times-circle"></i></button>
-                      <button class="btn btn-primary m-1 sss" (click)="removefromNewSubSpecial(sup.id)" *ngFor="let sup of addNewSubSpecialty">{{sup.name}} <i class="fas fa-times-circle"></i></button> -->
+                      <button class="btn btn-primary m-1 sss" (click)="removefromNewSubSpecial(sup.id)" *ngFor="let sup of NotAcceptByAdminClinicServicesSelected">{{sup.name}} <i class="fas fa-times-circle"></i></button>
+                      <button class="btn btn-primary m-1 sss" (click)="removefromNewSubSpecial(sup.id)" *ngFor="let sup of addNewClinicServices">{{sup.name}} <i class="fas fa-times-circle"></i></button>
                   </div>
                   <!-- <span class="text-warning" *ngIf="addNewSubSpecialty.length>0 || NotAcceptByAdminSubSpecialtySelected.length>0">* after enter this waiting to accept by admin</span> -->
                   
