--- a/Angular/src/app/components/client/creat-reservation-continue/creat-reservation-continue.component.html
+++ b/Angular/src/app/components/client/creat-reservation-continue/creat-reservation-continue.component.html
@@ -66,7 +66,7 @@
                         </div>
                         <hr>
                         <div class="text-center">
-                            <button class="btn btn-primary">My Appointments</button>
+                            <a class="btn btn-primary" routerLink="/UserAppointments">My Appointments</a>
                         </div>
                     </div>
                     
