--- a/Angular/src/app/components/home-page/home-page.component.html
+++ b/Angular/src/app/components/home-page/home-page.component.html
@@ -1,16 +1,26 @@
-
- <div id="carouselExampleControls" class="carousel slide mt-5" data-ride="carousel" 
-  style="display: flex;justify-content: center;">
+<div id="carouselExampleControls" class="carousel slide mt-5" data-ride="carousel"
+  style="display: flex;justify-content: center;" data-interval="false">
   <div class="carousel-inner col-12" style="justify-content: center;">
 
-    <div class="carousel-item"  style="justify-content: center;" *ngFor="let specailty of SpecailtyList" (click)="ShowDoctors(specailty.id)" [class.active]="specailty.id==1">
-      <div class="d-flex justify-content-center">
-        <div class="card mr-3" style="width: 18rem;">
+    <div class="carousel-item" style="justify-content: center;" *ngFor="let specailtys of SpecailtyList;let in=index"
+      [class.active]="in==0">
+      <!-- <div class="d-flex justify-content-center">
+        <div class="card mr-3" style="width: 18rem;cursor: pointer;" *ngFor="let specailty of specailtys"
+          (click)="ShowDoctors(specailty.id)">
           <img class="card-img-top" src="/assets/images/1.jpg" alt="Card image cap" style="height: 300px;">
           <div class="card-body">
             <p class="card-text">{{specailty.name}}</p>
           </div>
         </div>
+      </div> -->
+      <div class="cards-wrapper">
+        <div class="card" *ngFor="let specailty of specailtys" (click)="ShowDoctors(specailty.id)">
+          <img src="/assets/images/1.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-text">{{specailty.name}}</h5>
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
@@ -18,13 +28,12 @@
 
 
 
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev"
-    style="left: -1% !important;">
-    <span class="carousel-control-prev-icon" aria-hidden="true" style="background-color: gray;"></span>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
   <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true" style="background-color: gray;"></span>
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
 </div>
