--- a/Angular/src/app/components/client/show-doctor-details/show-doctor-details.component.html
+++ b/Angular/src/app/components/client/show-doctor-details/show-doctor-details.component.html
@@ -196,7 +196,7 @@
                                     date:'MMMM d'}}</button>
 
                                 <div style="text-align: center;" class="appointment mt-3" *ngIf="day.IsWork">
-                                    <div *ngFor="let shift of day._dayShift" class="mb-2 border">
+                                    <div *ngFor="let shift of day._dayShift" (click)="reserve(shift.id,doctor.user.userName,day.datee)" class="mb-2 border">
                                         <small>from : {{shift.from}}</small>
                                         <br>
                                         <!-- {{shift.id}}  -->
